[gd_scene load_steps=7 format=2]

[ext_resource path="res://shooter/entity/Keypad.gd" type="Script" id=1]
[ext_resource path="res://assets/computerterminal-on.png" type="Texture" id=2]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Keypad" type="Area2D"]
position = Vector2( 339, 212 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 10, 10 )
frames = SubResource( 3 )
animation = "off"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ToolTip" type="Label" parent="."]
margin_left = -41.0
margin_top = -51.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Must kill all enemies to use"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )

[connection signal="body_entered" from="." to="." method="_on_Keypad_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Keypad_body_exited"]
